--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "start": "nodejs ./bin/www"
     },
     "engines": {
-        "node": "4.7.2",
-        "npm": "4.1.2"
+        "node": "~4.2.1",
+        "npm": "~2.2.0"
     },
     "dependencies": {
         "express": "~4.0.0",
