--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.3.0",
     "mongoose": "^4.11.0",
     "morgan": "~1.0.0",
+    "serve-favicon": "^2.4.3",
     "static-favicon": "~1.0.0"
   }
 }
